closed scanner